--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <!-- Nosso CSS -->
     <link rel="stylesheet" href="/assets/css/global.css">
     <link rel="stylesheet" href="/assets/css/pokedex.css">
+    <link rel="stylesheet" href="/assets/css/types.css">
+    <link rel="stylesheet" href="/assets/css/combinedtypes.css">
 </head>
 
 <body>
