--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="/assets/css/global.css">
     <link rel="stylesheet" href="/assets/css/pokedex.css">
     <link rel="stylesheet" href="/assets/css/types.css">
-    <link rel="stylesheet" href="/assets/css/combinedtypes.css">
+    <!-- <link rel="stylesheet" href="/assets/css/combinedtypes.css"> -->
 </head>
 
 <body>
